initial support for ESP32-C3, ESP32-S2, ESP32-S3 (#112)
- ***Breaking changes***: requires `Glow Worm Luciferin` (v5.11.8)
- **[Added support for ESP32-C3, ESP32-S2, ESP32-S3](https://github.com/sblantipodi/firefly_luciferin/wiki/Compatible-Hardware).** 
Lolin ESP32-C3, Lolin ESP32-S2 and Lolin ESP32-S3 are now fully compatible with the existing [Luciferin Official PCB](https://github.com/sblantipodi/firefly_luciferin/wiki/Ready-to-print-PCB).
TinyS2 and TinyS3 are now compatible with the existing [Luciferin Module](https://github.com/sblantipodi/firefly_luciferin/wiki/Ready-to-print-PCB#upgradeble-pcb-using-luciferin-modules) for the [Luciferin Official PCB](https://github.com/sblantipodi/firefly_luciferin/wiki/Ready-to-print-PCB).
Closes [#46](https://github.com/sblantipodi/glow_worm_luciferin/issues/46).
- Added **[support for DotStar LED strips](https://github.com/sblantipodi/firefly_luciferin/wiki/Compatible-Hardware#led-strip-ws2812bsk6812apa102sk9812-5v).** Closes [#42](https://github.com/sblantipodi/glow_worm_luciferin/issues/42).
- Added the possibility to **[configure GPIOs for Relay, Button and LDR](https://github.com/sblantipodi/firefly_luciferin/wiki/Supported-GPIO-and-Baud-Rate)**.
- Added the possibility to **[switch profiles through MQTT](https://github.com/sblantipodi/firefly_luciferin/wiki/Home-Automation-configs)**. Closes [#110](https://github.com/sblantipodi/firefly_luciferin/issues/110).
- Added **[BRG, RBG, GBR color order](https://github.com/sblantipodi/firefly_luciferin/wiki/RGB-and-RGBW-support#how-to-change-color-order)** support.
- Improved [power saving](https://github.com/sblantipodi/firefly_luciferin/wiki/Power-saving-features) mode. Closes [#107](https://github.com/sblantipodi/firefly_luciferin/issues/107).
- Improved existing [light effects](https://github.com/sblantipodi/firefly_luciferin/wiki/Light-effects).
- Improved [aspect ratio auto detection](https://github.com/sblantipodi/firefly_luciferin/wiki/Aspect-ratio), very